--- a/ytm-react/src/components/sidebar/sidebarButton.css
+++ b/ytm-react/src/components/sidebar/sidebarButton.css
@@ -6,7 +6,7 @@ a {
   height: 80px;
   width: 80px;
   border-radius: 20px;
-  color: #f8d9c0;
+  color: #5674a7;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -17,13 +17,13 @@ a {
 }
 
 .btn-body.active {
-  background-color: rgba(244, 187, 146, 1);
+  background-color: #5674a7;
   color: #fff;
   transform: scale(1.05);
 }
 
 .btn-body:hover {
-  color: #fff;
+  color: #3d5275;
 }
 
 .btn-title {
