--- a/ytm-react/src/screens/home/home.css
+++ b/ytm-react/src/screens/home/home.css
@@ -1,7 +1,7 @@
 .main-body {
   height: 100vh;
   width: 100vw;
-  background-color: #fffdd0;
+  background-color: #dfdfdf;
   border-radius: 30px;
   display: flex;
 }
