player component issue

--- a/ytm-react/src/components/sidebar/sidebarButton.css
+++ b/ytm-react/src/components/sidebar/sidebarButton.css
@@ -17,7 +17,7 @@ a {
 }
 
 .btn-body.active {
-  background-color: #5674a7;
+  background-color: #7294ce;
   color: #fff;
   transform: scale(1.05);
 }
