--- a/ytm-react/src/components/audioPlayer/waveAnimation.css
+++ b/ytm-react/src/components/audioPlayer/waveAnimation.css
@@ -10,7 +10,7 @@
   transform: scale(0.4);
   height: 100%;
   width: var(--boxSize);
-  background: linear-gradient(40deg, #364562 20%, #c96850 100%) no-repeat;
+  background: linear-gradient(40deg, #364562 20%, #b0f2ff 100%) no-repeat;
   border-radius: 18px;
 }
 
